--- a/James_Chapman/Assignment-3/css/master.css
+++ b/James_Chapman/Assignment-3/css/master.css
@@ -1,2 +1,3 @@
-body{background-color: green;}
-<img src= "images/red_Apples.jpg.png" alt="When two dogs meet" width="200" height="200" />
+body{background-color: mediumseagreen;}
+
+<img src= "images/red_Apples.jpg.width="200" height="200" />
